--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -182,7 +182,7 @@
         <button id="askBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
         <button id="bidBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
         <button id="buyBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
-        <button id="raiseFundsBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#creatorDisclaimerModal">Raise funds</button>
+        <button id="raiseFundsBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#raiseFundsModal">Raise funds</button>
         <button id="issueBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
         <button id="changeRewardBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
         <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
@@ -290,54 +290,109 @@
 
 
     <!-- Modals -->
-
-    <div id="creatorDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div id="bidModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
       <div class="modal-dialog">
 
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Disclaimer</h4>
+            <h4 class="modal-title">Bid</h4>
           </div>
           <div class="modal-body">
-            <div class="text">
-             blah blah blah, a disclaimer
-           </div>
+            <form id="bidForm" class="form-horizontal" role="form">
+              <div class="form-group form-group-lg">
+                <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
+                <div class="col-sm-10">
+                  <div class="input-group">
+                    <span id="bidSymbol" class="input-group-addon">$</span>    
+                    <input name="bid" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
 
+                    data-bv-notempty="true"
+                    data-bv-notempty-message="Must be > 0"
 
-         </div> 
-         <div class="modal-footer">
-           <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+                    data-bv-greaterthan="true"
+                    data-bv-greaterthan-inclusive="false"
+                    data-bv-greaterthan-value="0"
+                    data-bv-greaterthan-message="Must be > 0" 
+
+                    >
+                    <span class="input-group-addon">per piece</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group form-group-lg">
+                <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
+                <div class="col-sm-10">
+                  <input name="bidPieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+                  type="text" 
+                  data-bv-integer="true"
+                  data-bv-integer-message="Must be a whole number"
+
+                  data-bv-notempty="true"
+                  data-bv-notempty-message="Must be a whole number"
+
+                  data-bv-greaterthan="true"
+                  data-bv-greaterthan-inclusive="false"
+                  data-bv-greaterthan-value="0"
+                  data-bv-greaterthan-message="Must be > 0"
+
+                  >
+                </div>
+              </div>
+
+              <div class="form-group form-group-lg">
+                <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
+                <div class="col-sm-10">
+                  <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
+                </div>
+              </div>
+              <div class="form-group form-group-lg">
+
+               <label class="col-sm-2 control-label" for="formGroupInputLarge">Total</label>
+               <div id="bidTotal" class="col-sm-10 form-control-static">
+
+               </div>
+             </div>
+
+             <div class="form-group form-group-lg">
+
+               <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds</label>
+               <div name="usersFunds" class="col-sm-10 form-control-static">
+
+               </div>
+             </div>
+
+             <div class="form-group form-group-lg">
+
+               <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds left</label>
+               <div id="bidFundsLeft" class="col-sm-10 form-control-static">
+
+               </div>
+             </div>
+             <button id="placebidBtn" type="submit" class="btn btn-primary">Place Bid</button>
+             <button data-toggle="modal" href="#depositModal" class="btn btn-primary hide">Add Funds</button>
+           </form>
+
          </div>
 
        </div>
      </div>
    </div>
-
-   <div id="bidModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+   <div id="buyModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog">
 
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Bid</h4>
+          <h4 class="modal-title">buy</h4>
         </div>
         <div class="modal-body">
-          <form id="bidForm" class="form-horizontal" role="form">
+          <form id="buyForm" class="form-horizontal" role="form">
             <div class="form-group form-group-lg">
               <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
               <div class="col-sm-10">
                 <div class="input-group">
-                  <span id="bidSymbol" class="input-group-addon">$</span>    
-                  <input name="bid" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
-
-                  data-bv-notempty="true"
-                  data-bv-notempty-message="Must be > 0"
-
-                  data-bv-greaterthan="true"
-                  data-bv-greaterthan-inclusive="false"
-                  data-bv-greaterthan-value="0"
-                  data-bv-greaterthan-message="Must be > 0" 
-
-                  >
+                  <span id="buySymbol" class="input-group-addon">$</span>
+                  <input readonly name="buy" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price">
                   <span class="input-group-addon">per piece</span>
                 </div>
               </div>
@@ -346,33 +401,26 @@
             <div class="form-group form-group-lg">
               <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
               <div class="col-sm-10">
-                <input name="bidPieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
-                type="text" 
-                data-bv-integer="true"
-                data-bv-integer-message="Must be a whole number"
+               <input name="buyPieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+               type="text" 
+               data-bv-integer="true"
+               data-bv-integer-message="Must be a whole number"
 
-                data-bv-notempty="true"
-                data-bv-notempty-message="Must be a whole number"
+               data-bv-notempty="true"
+               data-bv-notempty-message="Must be a whole number"
 
-                data-bv-greaterthan="true"
-                data-bv-greaterthan-inclusive="false"
-                data-bv-greaterthan-value="0"
-                data-bv-greaterthan-message="Must be > 0"
+               data-bv-greaterthan="true"
+               data-bv-greaterthan-inclusive="false"
+               data-bv-greaterthan-value="0"
+               data-bv-greaterthan-message="Must be > 0"
 
-                >
-              </div>
-            </div>
-
-            <div class="form-group form-group-lg">
-              <label class="col-sm-2 control-label" for="formGroupInputLarge">Date</label>
-              <div class="col-sm-10">
-                <input name="validUntil" class="form-control datepicker" type="text" id="formGroupInputLarge" placeholder="Valid Until...">
-              </div>
-            </div>
-            <div class="form-group form-group-lg">
+               >
+             </div>
+           </div>
+           <div class="form-group form-group-lg">
 
              <label class="col-sm-2 control-label" for="formGroupInputLarge">Total</label>
-             <div id="bidTotal" class="col-sm-10 form-control-static">
+             <div id="buyTotal" class="col-sm-10 form-control-static">
 
              </div>
            </div>
@@ -387,12 +435,13 @@
 
            <div class="form-group form-group-lg">
 
-             <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds left</label>
-             <div id="bidFundsLeft" class="col-sm-10 form-control-static">
+             <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds left</label>
+             <div id="buyFundsLeft" class="col-sm-10 form-control-static">
 
              </div>
            </div>
-           <button id="placebidBtn" type="submit" class="btn btn-primary">Place Bid</button>
+
+           <button id="placebuyBtn" type="submit" class="btn btn-primary">Place buy</button>
            <button data-toggle="modal" href="#depositModal" class="btn btn-primary hide">Add Funds</button>
          </form>
 
@@ -401,80 +450,8 @@
      </div>
    </div>
  </div>
- <div id="buyModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
 
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">buy</h4>
-      </div>
-      <div class="modal-body">
-        <form id="buyForm" class="form-horizontal" role="form">
-          <div class="form-group form-group-lg">
-            <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
-            <div class="col-sm-10">
-              <div class="input-group">
-                <span id="buySymbol" class="input-group-addon">$</span>
-                <input readonly name="buy" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price">
-                <span class="input-group-addon">per piece</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group form-group-lg">
-            <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
-            <div class="col-sm-10">
-             <input name="buyPieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
-             type="text" 
-             data-bv-integer="true"
-             data-bv-integer-message="Must be a whole number"
-
-             data-bv-notempty="true"
-             data-bv-notempty-message="Must be a whole number"
-
-             data-bv-greaterthan="true"
-             data-bv-greaterthan-inclusive="false"
-             data-bv-greaterthan-value="0"
-             data-bv-greaterthan-message="Must be > 0"
-
-             >
-           </div>
-         </div>
-         <div class="form-group form-group-lg">
-
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Total</label>
-           <div id="buyTotal" class="col-sm-10 form-control-static">
-
-           </div>
-         </div>
-
-         <div class="form-group form-group-lg">
-
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds</label>
-           <div name="usersFunds" class="col-sm-10 form-control-static">
-
-           </div>
-         </div>
-
-         <div class="form-group form-group-lg">
-
-           <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds left</label>
-           <div id="buyFundsLeft" class="col-sm-10 form-control-static">
-
-           </div>
-         </div>
-
-         <button id="placebuyBtn" type="submit" class="btn btn-primary">Place buy</button>
-         <button data-toggle="modal" href="#depositModal" class="btn btn-primary hide">Add Funds</button>
-       </form>
-
-     </div>
-
-   </div>
- </div>
-</div>
-
-<div id="depositModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+ <div id="depositModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
     <div class="modal-content">
@@ -751,50 +728,29 @@
 </div>
 </div>
 
-<div id="rewardModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+<div id="creatorDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Change Reward</h4>
+        <h4 class="modal-title">Disclaimer</h4>
       </div>
       <div class="modal-body">
         <div class="text">
-          Note, this will essentially cash every piece of yours owned out at the current rate at this moment,
-          then all pieces will start earning rewards at the new rate from now on.
-        </div>
-        <form id="rewardForm" class="form-horizontal" role="form">
-          <div class="form-group form-group-lg">
-            <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
-            <div class="col-sm-10">
-              <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
-
-              data-bv-notempty="true"
-              data-bv-notempty-message="Must be > 0"
-
-              data-bv-greaterthan="true"
-              data-bv-greaterthan-inclusive="false"
-              data-bv-greaterthan-value="0"
-              data-bv-greaterthan-message="Must be > 0" 
-
-              >
-            </div>
-
-            <button id="placeChangeRewardBtn" type="submit" class="btn btn-primary">Change Reward</button>
-
-          </form>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  
+         blah blah blah, a disclaimer
+       </div>
 
 
+     </div> 
+     <div class="modal-footer">
+       <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+     </div>
 
-  <div id="raiseFundsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+   </div>
+ </div>
+</div>
+
+<div id="raiseFundsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog">
 
       <div class="modal-content">
@@ -905,6 +861,50 @@
 </div>
 </div>
 </div>
+
+
+<div id="rewardModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Change Reward</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+          Note, this will essentially cash every piece of yours owned out at the current rate at this moment,
+          then all pieces will start earning rewards at the new rate from now on.
+        </div>
+        <form id="rewardForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
+            <div class="col-sm-10">
+              <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
+
+              data-bv-notempty="true"
+              data-bv-notempty-message="Must be > 0"
+
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-inclusive="false"
+              data-bv-greaterthan-value="0"
+              data-bv-greaterthan-message="Must be > 0" 
+
+              >
+            </div>
+
+            <button id="placeChangeRewardBtn" type="submit" class="btn btn-primary">Change Reward</button>
+
+          </form>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  
+
+
 
 
 
