--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -114,28 +114,7 @@
 
    <!-- The full page with teh sidebar -->
    <div class="container-fluid">
-     <div class="row">
 
-      <!-- The sidebar -->
-      <div id="side_col" class="col-md-2 sidebar">
-
-        <div class="mini-submenu">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </div>
-        <div class="list-group">
-          <li class="list-group-item">
-            <a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
-            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
-          </li>
-
-          <a class="list-group-item" href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a>
-          <a class="list-group-item" href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a>
-          <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a>
-        </div>
-      </div>        
-    </div>
 
     <!-- stop plugging in -->
 
@@ -143,7 +122,7 @@
 
 
     <!-- The Page -->
-    <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+    <div id="main_col" class="col-md-12">
 
 
 
