--- a/resources/testweb/creatorpage_template_old_backup.html
+++ b/resources/testweb/creatorpage_template_old_backup.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="../../favicon.ico">
 
-	<title>Starter Template for Bootstrap</title>
+	<title>Bitpieces</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="../darkly.bootstrap.min.css" rel="stylesheet">
