--- a/resources/testweb/creator_settings.html
+++ b/resources/testweb/creator_settings.html
@@ -173,7 +173,7 @@
         <div class="col-lg-12">
           <h1>Settings <small>Your settings </small></h1>
           <ol class="breadcrumb">
-            <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li><a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Settings</li>
           </ol>
         </div>
