--- a/resources/testweb/userdashboard_pieces.html
+++ b/resources/testweb/userdashboard_pieces.html
@@ -150,7 +150,7 @@
         <div class="col-lg-12">
           <h1> <span id="page_title"></span> <small> pieces</small> </h1> 
           <ol class="breadcrumb">
-            <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li><a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Pieces</li>
           </ol>
         </div>
