--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -148,7 +148,7 @@
         <div class="col-lg-12">
           <h1> <span id="page_title"></span> <small> funds</small> </h1> 
           <ol class="breadcrumb">
-            <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li><a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Funds</li>
           </ol>
         </div>
