--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -147,7 +147,7 @@
         <div class="col-lg-12">
           <h1> <span id="page_title"></span> <small> price history</small> </h1> 
           <ol class="breadcrumb">
-            <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
+            <li><a href="/users/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Prices</li>
           </ol>
         </div>
