--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -323,7 +323,7 @@
 
     
     <div class="othermain-col col-md-8 col-md-offset-2">
-    <div class="row-fluid">
+    <div class="row">
         <div id="disqus_thread"></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -347,7 +347,7 @@
       <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
       <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    </div>
+    
     <!-- FOOTER -->
   </div>
   <div class="row">
