--- a/resources/testweb/userdashboard_funds.html
+++ b/resources/testweb/userdashboard_funds.html
@@ -142,7 +142,7 @@
 
 
     <!-- The Page -->
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <div class="main-col col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
 
       <div class="row">
         <div class="col-lg-12">
