--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -540,8 +540,9 @@
       <div class="modal-body">
         <div class="text">
          Enter your username below to receive your login information
+        </br>
        </div>
-       <form id="registerForm" class="form-horizontal" role="form"
+       <form id="recoverPasswordForm" class="form-horizontal" role="form"
        data-bv-message="This value is not valid"
        data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
        data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
